<resources>
    <string name="app_name">Imago</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Confirm Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="Nickname">Nickname</string>
    <string name="Space"> </string>
    <string name="Next">Next</string>
    <string name="Publications">Publications</string>
    <string name="Commend">Commends</string>
    <string name="Like">Likes</string>
    <string name="Imago">Imago</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="End">Finish</string>

    <!--<string name="animated_rainbow_span">Animated rainbow span</string>
    <string name="animated_rainbow_span_desc">With ObjectAnimator</string>
  <string name="animated_rainbow_span_text">
    To make an animated rainbow span, translate the Shader with a Matrix, and change the translation
    value with an ObjectAnimator.
  </string>-->


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_choose_screen"></string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Log out</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
