<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityLogin"
    android:background="@color/fon">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:padding="10dp"
            android:hint="@string/prompt_email"
            android:textColorHint="#bbbbbb"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="sans-serif-smallcaps" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:padding="10dp"
            android:hint="@string/prompt_password"
            android:textColorHint="#bbbbbb"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:gravity="top"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-smallcaps" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:background="@drawable/button_background"
            android:textColor="@color/White" />
    </LinearLayout>

</RelativeLayout>
