<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_signup_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vital.myapplication.activities.SignUpActivity"
    android:background="@color/White">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1"
            tools:ignore="UselessParent">
            <!--TODO изменить actionBar на градиент-->
            <!--TODO переделать регистрацию-->

            <EditText
                android:id="@+id/email_edit_text_on_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_default_bg"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="#bbbbbb" />

            <EditText
                android:id="@+id/password_edit_text_on_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_default_bg"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="#bbbbbb"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sing_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:onClick="onSignUpButtonClick"
                android:text="@string/Next"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

</RelativeLayout>
